# ChangeLog for net-mail/uw-imap
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-imap/ChangeLog,v 1.102 2008/08/21 17:08:46 bluebird Exp $

  21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> uw-imap-2007b.ebuild:
  Stable on sparc, bug #231258

  20 Aug 2008; Markus Meier <maekke@gentoo.org> uw-imap-2007b.ebuild:
  amd64/x86 stable, bug #231258

  19 Aug 2008; Christian Hoffmann <hoffie@gentoo.org> metadata.xml,
  uw-imap-2007b.ebuild:
  moving uw-mailutils dependency to RDEPEND as it is really only a runtime
  dependency (hopefully fixing bug 231258 #c17), adding USE flag description
  to metadata (GLEP 56)

*uw-imap-2007b (24 Jul 2008)

  24 Jul 2008; Christian Hoffmann <hoffie@gentoo.org> +uw-imap-2007b.ebuild:
  version bump (bug 153281), thanks to Target <target@targ.dyndns.org> for
  ebuild submission and testing; also fixing license; thanks to dertobi123
  for approval for this commit

  15 Mar 2008; Mark Loeser <halcy0n@gentoo.org> uw-imap-2004g-r2.ebuild:
  Add a blocker in RDEPEND on virtual/imapd so we avoid manpage collisions;
  bug #198633

  01 Apr 2007; Andrej Kacian <ticho@gentoo.org> uw-imap-2004g-r2.ebuild:
  Also install flstring.h. Bug #160757, reported by Zak Kipling <zak at
  transversal.com>.

  06 Jan 2007; Fernando J. Pereda <ferdy@gentoo.org>
  -uw-imap-2004g-r1.ebuild:
  QA: Clean unused versions.

  07 Oct 2006; Andrej Kacian <ticho@gentoo.org> uw-imap-2004g-r1.ebuild,
  uw-imap-2004g-r2.ebuild:
  Correctly (r)depend on xinetd. Pointed out by Massimiliano Adamo
  <massimilianoadamo at yahoo.it> in bug #123311.

  17 May 2006; Fernando J. Pereda <ferdy@gentoo.org>
  uw-imap-2004g-r2.ebuild:
  Stable on alpha.

  21 Feb 2006; Jeroen Roovers <jer@gentoo.org> uw-imap-2004g-r2.ebuild:
  Stable on hppa.

  07 Feb 2006; Simon Stelling <blubb@gentoo.org> uw-imap-2004g-r2.ebuild:
  stable on amd64

  23 Jan 2006; Simon Stelling <blubb@gentoo.org> uw-imap-2004g-r2.ebuild: