@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/uw-mailutils
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-mailutils/ChangeLog,v 1.18 2008/08/21 17:06:27 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-mailutils/ChangeLog,v 1.19 2008/08/22 19:13:44 jer Exp $
+
+  22 Aug 2008; Jeroen Roovers <jer@gentoo.org> uw-mailutils-2007b.ebuild:
+  Stable for HPPA (bug #231258).
 
   21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org>
   uw-mailutils-2007b.ebuild:
