@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/uw-imap
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-imap/ChangeLog,v 1.102 2008/08/21 17:08:46 bluebird Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/uw-imap/ChangeLog,v 1.103 2008/08/22 19:14:09 jer Exp $
+
+  22 Aug 2008; Jeroen Roovers <jer@gentoo.org> uw-imap-2007b.ebuild:
+  Stable for HPPA (bug #231258).
 
   21 Aug 2008; Friedrich Oslage <bluebird@gentoo.org> uw-imap-2007b.ebuild:
   Stable on sparc, bug #231258
